# clawcode

./: .clawcode.json  .gitignore  LICENSE  README.md  README.zh.md  app.py  pyproject.toml  requirements.txt
clawcode/: __init__.py  __main__.py  main.py  storage_paths.py
clawcode/llm/tools/performance/core/engine-py/: Cargo.toml  README.md  pyproject.toml
clawcode/llm/tools/performance/core/engine-py/src/: glob_impl.rs  lib.rs
config/: __init__.py  constants.py  settings.py
core/: logging.py  permission.py  pubsub.py
db/: __init__.py  connection.py  models.py
docs/: agent-team-orchestration.zh.md  architecture.md  architecture.zh.md  clawcode-configuration.md  clawcode-performance.zh.md  ecap-learning.md  ecap-learning.zh.md  slash-commands.zh.md
llm/: agent.py
message/: __init__.py  models.py  service.py
plugin/: __init__.py  types.py
screens/: __init__.py
session/: __init__.py  service.py
tests/: test_agent.py  test_anthropic_resolve.py  test_arc_plan.py  test_at_file_complete.py  test_bash_environments_integration.py  test_bash_python_fallback.py  test_bash_windows_git_bash.py  test_browser_integration_smoke.py  test_browser_web_localization.py  test_builtin_skills_api_design.py  test_builtin_skills_backend_patterns.py  test_builtin_skills_clickhouse_io.py  test_builtin_skills_coding_standards.py  test_builtin_skills_database_migrations.py  test_builtin_skills_deployment_patterns.py  test_builtin_skills_django_patterns.py  test_builtin_skills_docker_patterns.py  test_builtin_skills_frontend_patterns.py  test_builtin_skills_golang_patterns.py  (+96 more)
(+332 files in other folders)
